--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,31 +1,19 @@
 !!!
-%html
+%html{:lang => 'en'}
   %head
-    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Pp Migration'
-    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Pp Migration'}"}
-    = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+    %meta{:content => content_for?(:description) ? yield(:description) : "Papers Past", :name => "description"}
+    = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "application"
     = csrf_meta_tags
-  %body
-    -# application layout styled for Twitter Bootstrap 3.0
-    %header
-      %nav.navbar.navbar-default.navbar-fixed-top
-        .container
-          .navbar-header
-            %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
-              %span.sr-only Toggle navigation
-              %span.icon-bar
-              %span.icon-bar
-              %span.icon-bar
-          .collapse.navbar-collapse
-            = render 'layouts/navigation'
-    %main{:role => "main"}
+    = yield(:head)
+
+    %meta{:charset => "utf-8"}
+    %title= content_for?(:title) ? yield(:title) : "Papers Past"
+
+  %body{:class => "#{controller_name} #{action_name}"}
+    = render 'layouts/navigation'
+    #main{:role => "main"}
       .container
-        .container
-          .content
-            .row
-              .col-md-12
-                = render 'layouts/messages'
-                = yield
-            %footer
+        = yield
+      %footer
