--- a/app/views/format_viewer/search.html.haml
+++ b/app/views/format_viewer/search.html.haml
@@ -1,5 +1,5 @@
 .results 
-	%h1=raw "Searching newspapers for <span>#{params[:query]}</span>"
+	%h1=raw "Searching #{@type.to_s.humanize.downcase} for <span>#{params[:query]}</span>"
 
 	%p.results-info=raw "There are #{number_with_delimiter(@search_results['search']['result_count'])} items matching <span>#{params[:query]}</span>. Here are the first #{@search_results['search']['per_page']}."
 
@@ -15,5 +15,5 @@
 				%tr
 					%td= parts[2]
 					%td
-						%a{:href => "/newspapers/#{result['id']}"}= parts[0]
+						%a{:href => "/#{@type}/#{result['id']}"}= parts[0]
 					%td= parts[1]
