--- a/app/views/format_viewer/search.html.haml
+++ b/app/views/format_viewer/search.html.haml
@@ -1,19 +1,24 @@
 .results 
-	%h1=raw "Searching #{@type.to_s.humanize.downcase} for <span>#{params[:query]}</span>"
+
+	%h1=raw "Searching #{FORMAT_LABELS[@type.to_sym].downcase} for &quot;<span>#{params[:query]}</span>&quot;"
+
+	.well 
+		%form.form-inline{:role => "form", :action => "/#{@type}/search", :method => 'get'}
+			.row
+				.col-md-9
+					%input#query.form-control.input-lg{:name => 'query', :placeholder => "What are you looking for?", :value => params[:query] }
+					/ .tools
+					/ 	%input#mode1{:type => "radio", :name => "mode", :value => "all", :checked => "checked"}
+					/ 	%label <strong>All</strong> of these words
+					/ 	%input#mode2{:type => "radio", :name => "mode", :value => "any"}
+					/ 	%label <strong>Any</strong> of these words
+					/ 	%input#mode3{:type => "radio", :name => "mode", :value => "exact"}
+					/ 	%label This exact phrase
+					/ 	.pull-right
+					/ 		%a{:href => '#'} More search options
+				.col-md-3
+					%button.btn.btn-info.input-lg.form-control{:type => "submit"} Search
 
 	%p.results-info=raw "There are #{number_with_delimiter(@search_results['search']['result_count'])} items matching <span>#{params[:query]}</span>. Here are the first #{@search_results['search']['per_page']}."
 
-	%table.table
-		%thead
-			%tr
-				%th Date
-				%th Article
-				%th Newspaper
-		%tbody
-			- @search_results['search']['results'].each do |result|
-				- parts = result['title'].gsub(/^(.*)\(([^(]+),(.*)\)/, '\1**\2**\3').split("**")
-				%tr
-					%td= parts[2]
-					%td
-						%a{:href => "/#{@type}/#{result['id']}"}= parts[0]
-					%td= parts[1]
+	= render :partial => "#{@type}/search_results"
