--- a/app/views/format_viewer/show.html.haml
+++ b/app/views/format_viewer/show.html.haml
@@ -1,10 +1,10 @@
 %ol.breadcrumb
 	%li= link_to 'Newspapers', "/newspapers"
-	%li= link_to @item[:newspaper], "/newspapers/#{@item[:newspaper]}"
-	%li= link_to @item[:date_year], "/newspapers/#{@item[:newspaper]}/#{@item[:date_year]}"
-	%li= link_to @item[:date_month], "/newspapers/#{@item[:newspaper]}/#{@item[:date_year]}/#{@item[:date_month]}"
-	%li= link_to @item[:date_day].to_i, "/newspapers/#{@item[:newspaper]}/#{@item[:date_year]}/#{@item[:date_month]}/#{@item[:date_day]}"
-	%li= link_to "Page #{@item[:page_number]}", "/newspapers/#{@item[:newspaper]}/#{@item[:date_year]}/#{@item[:date_month]}/#{@item[:date_day]}/#{@item[:page_number]}"
+	%li= link_to @item[:newspaper], "/newspapers/title/#{@item[:newspaper].parameterize}"
+	%li= link_to @item[:date_year], "/newspapers/title/#{@item[:newspaper].parameterize}/#{@item[:date_year]}"
+	%li= link_to @item[:date_month], "/newspapers/title/#{@item[:newspaper].parameterize}/#{@item[:date_year]}/#{@item[:date_month]}"
+	%li= link_to @item[:date_day].to_i, "/newspapers/title/#{@item[:newspaper].parameterize}/#{@item[:date_year]}/#{@item[:date_month]}/#{@item[:date_day]}"
+	%li= link_to "Page #{@item[:page_number]}", "/newspapers/title/#{@item[:newspaper].parameterize}/#{@item[:date_year]}/#{@item[:date_month]}/#{@item[:date_day]}/#{@item[:page_number]}"
 	%li.active= @item[:title]
 
 .item 
