User testing feedback

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -246,3 +246,12 @@ table {
 		padding: 1em;
 	}
 }
+
+/*
+.date-twisty li a {
+	text-align: left;
+	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	margin: 0;
+}
+*/
