--- a/app/views/newspapers/title.html.haml
+++ b/app/views/newspapers/title.html.haml
@@ -5,8 +5,12 @@
 	- else 
 		%li= link_to "All", "/newspapers/title"
 		%li= link_to @title[:title], "/newspapers/title/#{@title[:title].parameterize}"
-	- unless params[:year].nil?
-		%li= link_to params[:year], "/newspapers/title/#{@title[:title].parameterize}/#{params[:year]}"
+	- if @year > 0
+		%li= link_to @year, "/newspapers/title/#{@title[:title].parameterize}/#{@year}"
+	- if @month > 0
+		%li= link_to @month, "/newspapers/title/#{@title[:title].parameterize}/#{@year}/#{@month}"
+	- if @day > 0
+		%li= link_to @day, "/newspapers/title/#{@title[:title].parameterize}/#{@year}/#{@month}/#{@day}"
 
 .newspaper_title 
 	- if @title.nil?
@@ -34,28 +38,40 @@
 	- else
 		%h1
 			= @title[:title]
-			%small= @title[:region]
+			%small= "#{@title[:region]}, #{@title[:start_year]}-#{@title[:end_year]}"
 
 		.row
 			.col-md-6
 
-				%h2 Browse issues 
+				%h2 Browse issues
+
+				- if @year > 0
+					= link_to "Show all years", "/newspapers/title/#{@title[:title].parameterize}"
 
 				- (@title[:start_year]..@title[:end_year]).each do |yr|
-					%h3= link_to yr, "/newspapers/title/#{@title[:title].parameterize}/#{yr}"
-					%ul.nav.nav-pills
-						%li= link_to 'Jan', '#'
-						%li= link_to 'Feb', '#'
-						%li= link_to 'Mar', '#'
-						%li= link_to 'Apr', '#'
-						%li= link_to 'May', '#'
-						%li= link_to 'Jun', '#'
-						%li= link_to 'Jul', '#'
-						%li= link_to 'Aug', '#'
-						%li= link_to 'Sep', '#'
-						%li= link_to 'Oct', '#'
-						%li= link_to 'Nov', '#'
-						%li= link_to 'Dec', '#'
+					- if params[:year] == yr or params[:year].nil?
+						%h3= link_to yr, "/newspapers/title/#{@title[:title].parameterize}/#{yr}"
+						%ul.nav.nav-pills.date-twisty
+							- ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'Septmeber', 'October', 'November', 'December'].each_with_index do |month, i|
+								%li{ :class => (@month == i + 1) ? 'active' : 'inactive'}= link_to month, "/newspapers/title/#{@title[:title].parameterize}/#{yr}/#{i + 1}"
+						- if @month > 0
+							%table.table
+								%thead
+									%tr
+										%th S
+										%th M
+										%th T
+										%th W
+										%th T
+										%th F
+										%th S
+								%tbody
+									- 5.times do |w|
+										%tr 
+											- 7.times do |d|
+												- daydate = (w*7) + d + 1
+												%td
+													= link_to daydate,  "/newspapers/title/#{@title[:title].parameterize}/#{@year}/#{@month}/#{daydate}" if daydate < 32
 
 			.col-md-6
 
