--- a/app/views/about/home.html.haml
+++ b/app/views/about/home.html.haml
@@ -21,7 +21,7 @@
 				%h4
 					= link_to "Learn more...", '/about#new_site'
 			.well
+				%h3 Millions of pages of historical documents, available instantly and for free!
 				%p <strong>Papers Past</strong> contains more than three million pages of digitised New Zealand newspapers and periodicals. The collection covers the years 1839 to 1945 and includes 83 publications from all regions of New Zealand.
-				%p There are two main ways to find information in Papers Past: searching and browsing. Searching lets you enter a query term and retrieves articles that contain that term. Browsing lets you look at all the newspapers, starting with a year, a region, or a newspaper title. All the newspaper titles on the site can be searched and browsed.
 				%p The newspapers on Papers Past are only a small proportion of New Zealand newspapers. If you cannot find what you are looking for online, it may be available as a paper copy or microfilm. Check the National Newspaper Collection page on the National Library website for more information.
 
