--- a/app/views/periodicals/_home_cols.html.haml
+++ b/app/views/periodicals/_home_cols.html.haml
@@ -1,7 +1,5 @@
 .row
-	.col-md-3
-		= image_tag("home-#{@type.to_s.dasherize}.jpg", :class => 'home-image')
-	.col-md-4.date-column
+	.col-md-6.date-column
 		%h3= link_to "By Date", "/#{@type.to_s.dasherize}/date"
 
 		%ul
@@ -10,9 +8,11 @@
 				%li= link_to "#{decade}s", "/#{@type.to_s.dasherize}/date/#{decade}s"
 				
 		%p= link_to "Looking for newspapers after 1945?", "#"
-	.col-md-5
+	.col-md-6
 		%h3= link_to "By title", "/#{@type.to_s.dasherize}/title"
 		%ul
+			%li
+				%a{:href => "/#{@type.to_s.dasherize}/title/kai-tiaki"} Kai Tiaki: The Journal of NZ Nursing
 			%li
 				%a{:href => "/#{@type.to_s.dasherize}/title/te-ao-hou"} Te Ao Hou
 			%li
